--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
+    "react-svg": "^16.1.34",
     "sass": "^1.78.0"
   },
   "scripts": {
